feat: add ghcr.io pull secret

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
-# Docker Hub Authentication
-# Required to avoid image pull failures and rate limiting
-# Get your Docker Hub access token from: https://hub.docker.com/settings/security
+# Environment variables for Grounds Development Infrastructure
+# Copy this file to .env and fill in your credentials
+# The .env file is git-ignored and will not be committed
 
+# Docker Hub credentials (for k3d registry mirror configuration)
 DOCKER_USERNAME=your-dockerhub-username
 DOCKER_PASSWORD=your-dockerhub-token
 
-# Example:
-# DOCKER_USERNAME=myusername
-# DOCKER_PASSWORD=dckr_pat_1234567890abcdef1234567890abcdef12345678
+# GitHub Container Registry (GHCR) credentials
+# Create a Personal Access Token (PAT) with 'read:packages' permission at:
+# https://github.com/settings/tokens
+GHCR_USERNAME=your-github-username
+GHCR_TOKEN=your-github-pat-token
