--- a/values/agones.values.yaml
+++ b/values/agones.values.yaml
@@ -15,8 +15,10 @@ agones:
     service:
       http:
         port: 10443
+        targetPort: 8443
       grpc:
         port: 10444
+        targetPort: 8444
 
   # Controller configuration
   controller:
