--- a/values/agones.values.yaml
+++ b/values/agones.values.yaml
@@ -12,76 +12,21 @@ agones:
 
   # Allocator service configuration
   allocator:
-    service:
-      http:
-        port: 10443
-        targetPort: 8443
-      grpc:
-        port: 10444
-        targetPort: 8444
+    # Disable allocator for local development
+    install: false
 
   # Controller configuration
   controller:
-    # Resource limits for local development
-    resources:
-      requests:
-        cpu: 100m      # 0.1 CPU cores
-        memory: 256Mi  # 256 MB RAM
-      limits:
-        cpu: 500m      # 0.5 CPU cores
-        memory: 512Mi  # 512 MB RAM
+    replicas: 1  # Single replica for local development
 
-    # Health checks - optimized for local development
-    livenessProbe:
-      enabled: true
-      initialDelaySeconds: 15
-      periodSeconds: 5
-      timeoutSeconds: 5
-      failureThreshold: 3
-      successThreshold: 1
+  # Extensions configuration
+  extensions:
+    replicas: 1  # Single replica for local development
 
-    readinessProbe:
-      enabled: true
-      initialDelaySeconds: 3
-      periodSeconds: 5
-      timeoutSeconds: 5
-      failureThreshold: 3
-      successThreshold: 1
+  # Service Accounts configuration
+  serviceAccounts:
+    sdk:
+      name: agones-sdk
 
-# Disable metrics and monitoring for local development
-metrics:
-  serviceMonitor:
-    enabled: false
-  # Disable Prometheus metrics
-  enabled: false
-
-# Disable allocation service for local development
-allocation:
-  enabled: false
-
-# Disable autoscaler for local development
-autoscaler:
-  enabled: false
-
-# Disable fleet allocation for local development
-fleetAllocation:
-  enabled: false
-
-# Disable webhook for local development
-webhook:
-  enabled: false
-
-# Disable allocation service for local development
-allocationService:
-  enabled: false
-
-# Network policy (disabled for local development)
-networkPolicy:
-  enabled: false
-
-# Service configuration
-service:
-  type: ClusterIP
-  ports:
-    http: 80
-    https: 443
+gameservers:
+  namespaces: [ games ]
